--- a/src/styles/stylesheet.css
+++ b/src/styles/stylesheet.css
@@ -5,6 +5,66 @@
 */
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,100;0,9..144,200;0,9..144,300;0,9..144,400;0,9..144,500;0,9..144,600;0,9..144,700;0,9..144,800;0,9..144,900;1,9..144,100;1,9..144,200;1,9..144,300;1,9..144,400;1,9..144,500;1,9..144,600;1,9..144,700;1,9..144,800;1,9..144,900&display=swap");
+.portfolio-container {
+  width: 100%;
+  height: 100%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(auto, 1fr);
+  padding-top: 15%;
+}
+
+.box-test {
+  width: 200px;
+  height: 200px;
+  justify-self: center;
+  background-color: lightgray;
+}
+
+.contact-form-container article {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.contact-form_input {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  row-gap: 1rem;
+}
+.contact-form_input .form {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-size: 1.5rem;
+  border-radius: 0.5rem;
+  padding: 0.5rem;
+}
+.contact-form_input .input-button-container {
+  display: flex;
+  flex-direction: row;
+  -moz-column-gap: 1rem;
+       column-gap: 1rem;
+}
+.contact-form_input .input-button-container button {
+  width: 8.5rem;
+}
+.contact-form_input .input-container {
+  display: flex;
+  flex-direction: column;
+  row-gap: 0.5rem;
+}
+.contact-form_input .input {
+  width: 15rem;
+  height: 2rem;
+}
+.contact-form_input .text {
+  min-width: 25rem;
+  max-width: 25rem;
+  min-height: 15rem;
+  max-height: 15rem;
+}
+
 @font-face {
   font-family: canvas;
   src: url(/design_elements/MADE\ Canvas\ Black\ PERSONAL\ USE.otf);
@@ -66,7 +126,7 @@ table {
 }
 
 html, body, .container, .panel {
-  height: 100%;
+  max-height: 100vh;
 }
 
 header {
@@ -74,11 +134,20 @@ header {
   height: 4rem;
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
   position: fixed;
   z-index: 2;
   background-color: lightseagreen;
+}
+header .progress-container {
+  background-color: red;
+  width: 40rem;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
 
 header button {
@@ -89,8 +158,7 @@ header button {
 }
 
 .progress-circle {
-  position: absolute;
-  left: 0;
+  position: relative;
   background-color: lightcoral;
   width: 10px;
   height: 10px;
@@ -98,8 +166,7 @@ header button {
 }
 
 body {
-  -ms-scroll-chaining: none;
-      overscroll-behavior: none;
+  overscroll-behavior: none;
   overflow-x: hidden;
   overflow-y: scroll;
   margin: 0;
@@ -111,8 +178,7 @@ body::-webkit-scrollbar {
 }
 
 .container {
-  -ms-scroll-chaining: none;
-      overscroll-behavior: none;
+  overscroll-behavior: none;
   width: 300%;
   height: 100vh;
   display: flex;
@@ -129,15 +195,15 @@ body::-webkit-scrollbar {
 }
 
 .one {
-  background-color: lightcoral;
+  background-color: #CBAD8D;
 }
 
 .two {
-  background-color: lightblue;
+  background-color: #A48374;
 }
 
 .three {
-  background-color: lightgoldenrodyellow;
+  background-color: #3A2D28;
 }
 
 .pin-spacer {
