--- a/src/styles/stylesheet.scss
+++ b/src/styles/stylesheet.scss
@@ -1,4 +1,7 @@
+@use "./portfolio";
+@use "./contact-form";
 @use "./base";
+
 
 @mixin flex-box($flex-direction, $justify-content, $align-items){
     display: flex;
@@ -25,7 +28,7 @@ $shaaq-white: #F1EDE6;
 }
 
 html, body, .container, .panel{
-    height: 100%;
+    max-height: 100vh;
     
 }
 
@@ -35,12 +38,22 @@ header{
 
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
     position: fixed;
     z-index: 2;
 
     background-color: lightseagreen;
+
+    .progress-container{
+        background-color: red;
+        width: 40rem;
+        height: 100%;
+
+        @include flex-box(row, space-between, center)
+    }
+    
+
 }
 
 header button{
@@ -51,9 +64,12 @@ header button{
     border-style: none;
 }
 
+
+
+
 .progress-circle{
-    position: absolute;
-    left: 0;
+    position: relative;
+    
     
     background-color: lightcoral;
     width: 10px;
@@ -94,15 +110,15 @@ body::-webkit-scrollbar {
 }
 
 .one{
-background-color: lightcoral;
+background-color: $shaaq-beige;
 }
 
 .two{
-    background-color: lightblue;
+    background-color: $shaaq-brown;
 }
 
 .three{
-background-color: lightgoldenrodyellow;
+background-color: $shaaq-dark_brown;
 }
 
 .pin-spacer{
