--- a/src/styles/_contact-form.scss
+++ b/src/styles/_contact-form.scss
@@ -1,4 +1,10 @@
-.contact-form-container{
+.contact-form_container{
+    width: 100%;
+    height: 100%;
+
+    display: flex;
+    justify-content: center;
+
     article{
         display: flex;
         flex-direction: column;
@@ -53,4 +59,38 @@
         
 
     }
+}
+
+
+.contact-text-container{
+    position: relative;
+    align-self: flex-start;
+
+    left: 5%;
+    top: 10%;
+    width: 100%;
+    overflow: visible;
+
+}
+
+.form-text-container{
+    position: relative;
+        align-self: flex-end;
+        font-size: 15rem;     
+        right: 15%;
+        bottom: 10%;
+
+        overflow: visible;
+}
+
+.contact{
+    stroke-dasharray: 1000;
+    stroke-dashoffset: 1000;
+    fill-opacity: 0;
+}
+
+.form{
+    stroke-dasharray: 1000;
+    stroke-dashoffset: 1000;
+    fill-opacity: 0;
 }
