--- a/src/styles/_portfolio.scss
+++ b/src/styles/_portfolio.scss
@@ -1,19 +1,65 @@
 .portfolio-container{
     width: 100%;
     height: 100%;
+
+    display: flex;
+   
+}
+
+.portfolio-items{
+    width: 100%;
+    height: 100%;
     
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(auto, 1fr);
-    padding-top: 15%;
+    grid-template-rows: repeat(1, 1fr);
+    
+    justify-self: center;
+    align-items: center;
+
+    z-index: 2;
 
 }
 
-.box-test{
+.portfolio-item{
     width: 200px;
     height: 200px;
 
     justify-self: center;
 
     background-color: lightgray;
+   
+}
+
+.previous-text-container{
+    position: relative;
+    align-self: flex-start;
+
+    left: 5%;
+    top: 10%;
+    width: 100%;
+    overflow: visible;
+
+}
+
+.work-text-container{
+    position: relative;
+        align-self: flex-end;
+        font-size: 15rem;     
+        right: 15%;
+        bottom: 10%;
+
+        overflow: visible;
+}
+
+.previous{
+    stroke-dasharray: 1000;
+    stroke-dashoffset: 1000;
+    fill-opacity: 0;
+}
+
+.work{
+    stroke-dasharray: 1000;
+    stroke-dashoffset: 1000;
+    fill-opacity: 0;
 }
