--- a/src/styles/stylesheet.css
+++ b/src/styles/stylesheet.css
@@ -8,20 +8,64 @@
 .portfolio-container {
   width: 100%;
   height: 100%;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(auto, 1fr);
-  padding-top: 15%;
+  display: flex;
 }
 
-.box-test {
+.portfolio-items {
+  width: 100%;
+  height: 100%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(1, 1fr);
+  justify-self: center;
+  align-items: center;
+  z-index: 2;
+}
+
+.portfolio-item {
   width: 200px;
   height: 200px;
   justify-self: center;
   background-color: lightgray;
 }
 
-.contact-form-container article {
+.previous-text-container {
+  position: relative;
+  align-self: flex-start;
+  left: 5%;
+  top: 10%;
+  width: 100%;
+  overflow: visible;
+}
+
+.work-text-container {
+  position: relative;
+  align-self: flex-end;
+  font-size: 15rem;
+  right: 15%;
+  bottom: 10%;
+  overflow: visible;
+}
+
+.previous {
+  stroke-dasharray: 1000;
+  stroke-dashoffset: 1000;
+  fill-opacity: 0;
+}
+
+.work {
+  stroke-dasharray: 1000;
+  stroke-dashoffset: 1000;
+  fill-opacity: 0;
+}
+
+.contact-form_container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+}
+.contact-form_container article {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -63,6 +107,36 @@
   max-width: 25rem;
   min-height: 15rem;
   max-height: 15rem;
+}
+
+.contact-text-container {
+  position: relative;
+  align-self: flex-start;
+  left: 5%;
+  top: 10%;
+  width: 100%;
+  overflow: visible;
+}
+
+.form-text-container {
+  position: relative;
+  align-self: flex-end;
+  font-size: 15rem;
+  right: 15%;
+  bottom: 10%;
+  overflow: visible;
+}
+
+.contact {
+  stroke-dasharray: 1000;
+  stroke-dashoffset: 1000;
+  fill-opacity: 0;
+}
+
+.form {
+  stroke-dasharray: 1000;
+  stroke-dashoffset: 1000;
+  fill-opacity: 0;
 }
 
 @font-face {
@@ -119,6 +193,60 @@ table {
   border-spacing: 0;
 }
 
+.background-text-container {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: column;
+  row-gap: 2rem;
+}
+.background-text-container .main-text {
+  font-size: 10rem;
+  color: #000000;
+}
+.background-text-container .sub-text {
+  position: relative;
+  font-size: 13rem;
+  color: #000000;
+}
+.background-text-container .hi-text-container {
+  position: relative;
+  align-self: flex-start;
+  top: 10%;
+  left: 5rem;
+}
+.background-text-container .name-text-container {
+  width: 100%;
+}
+.background-text-container .im-text-container {
+  position: relative;
+  align-self: flex-end;
+  font-size: 15rem;
+  right: 5rem;
+  bottom: 10%;
+}
+.background-text-container .hi {
+  stroke-dasharray: 850;
+  stroke-dashoffset: 1000;
+  fill-opacity: 0;
+}
+.background-text-container .im {
+  stroke-dasharray: 1000;
+  stroke-dashoffset: 1000;
+  fill-opacity: 0;
+}
+.background-text-container .name {
+  stroke-dasharray: 770;
+  stroke-dashoffset: 1000;
+  fill-opacity: 0;
+}
+.background-text-container .github-logo {
+  margin-top: -5rem;
+}
+
 .App {
   background: linear-gradient(180deg, rgb(241, 237, 230) 0%, rgb(238, 225, 211) 100%);
   width: 100vw;
@@ -127,6 +255,19 @@ table {
 
 html, body, .container, .panel {
   max-height: 100vh;
+}
+
+.name_animation_container {
+  height: 100vh;
+  width: 100%;
+  font-weight: 700;
+  font-size: 1.5em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #3A2D28;
+  position: absolute;
+  z-index: 20;
 }
 
 header {
@@ -138,10 +279,10 @@ header {
   align-items: center;
   position: fixed;
   z-index: 2;
-  background-color: lightseagreen;
+  background-color: #EBE3DB;
 }
 header .progress-container {
-  background-color: red;
+  background-color: #EBE3DB;
   width: 40rem;
   height: 100%;
   display: flex;
@@ -149,17 +290,36 @@ header .progress-container {
   justify-content: space-between;
   align-items: center;
 }
-
 header button {
   width: 3rem;
   height: 3rem;
-  background-color: green;
   border-style: none;
+}
+header .about_button {
+  width: 4rem;
+  height: 4rem;
+  background-image: url(/design_elements/Logo/AJ_logo_no_dot.svg);
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+header .portfolio_button {
+  width: 3rem;
+  height: 3rem;
+  background-color: #3A2D28;
+}
+header .contactForm_button {
+  width: 3rem;
+  height: 3rem;
+  background-color: #3A2D28;
 }
 
 .progress-circle {
   position: relative;
-  background-color: lightcoral;
+  background-color: black;
+  left: 2.45rem;
+  top: 10px;
+  border-radius: 50%;
   width: 10px;
   height: 10px;
   z-index: 3;
