--- a/src/styles/stylesheet.css
+++ b/src/styles/stylesheet.css
@@ -6,8 +6,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,100;0,9..144,200;0,9..144,300;0,9..144,400;0,9..144,500;0,9..144,600;0,9..144,700;0,9..144,800;0,9..144,900;1,9..144,100;1,9..144,200;1,9..144,300;1,9..144,400;1,9..144,500;1,9..144,600;1,9..144,700;1,9..144,800;1,9..144,900&display=swap");
 .portfolio-container {
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   display: flex;
 }
 
@@ -22,11 +22,90 @@
   z-index: 2;
 }
 
-.portfolio-item {
-  width: 200px;
-  height: 200px;
+.portfolio-button {
+  width: 12rem;
+  height: 12rem;
+  border-radius: 50%;
   justify-self: center;
-  background-color: lightgray;
+  background-color: #c9ccc9;
+}
+
+.visible {
+  display: flex;
+}
+
+.hidden {
+  display: none;
+}
+
+.portfolio-list-container {
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+  z-index: 3;
+  justify-content: center;
+  align-items: center;
+}
+.portfolio-list-container .portfolio-list {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  grid-template-rows: repeat(auto, 1fr);
+  max-width: 60rem;
+  min-width: 60rem;
+  height: 50rem;
+  min-height: 20rem;
+  margin-top: 50%;
+  margin-bottom: 50%;
+  border: 3px solid black;
+  border-radius: 5px;
+  z-index: 3;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  background-color: #c9ccc9;
+}
+.portfolio-list-container .portfolio-list .portfolio-data-item {
+  justify-self: center;
+  align-self: center;
+  display: grid;
+  grid-template-columns: repeat(3, 33%);
+  grid-template-rows: repeat(1, 1fr);
+  grid-template-areas: "names description buttons";
+  width: 100%;
+  height: 8rem;
+  border-bottom: 2px solid #111111;
+  background-color: #c9ccc9;
+  overflow: hidden;
+}
+.portfolio-list-container .portfolio-list .portfolio-data-item .data-item-name {
+  grid-area: names;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.portfolio-list-container .portfolio-list .portfolio-data-item .data-item-description {
+  grid-area: description;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.portfolio-list-container .portfolio-list .portfolio-data-item .data-item-buttons {
+  grid-area: buttons;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.portfolio-list-container .portfolio-list .portfolio-data-item a {
+  color: #111111;
+  font-size: 0.9rem;
+  text-decoration: none;
+}
+.portfolio-list-container .portfolio-list-background {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: 2;
+  background-color: #707372;
+  opacity: 90%;
 }
 
 .previous-text-container {
@@ -265,7 +344,7 @@ html, body, .container, .panel {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #3A2D28;
+  background-color: #54585a;
   position: absolute;
   z-index: 20;
 }
@@ -279,11 +358,11 @@ header {
   align-items: center;
   position: fixed;
   z-index: 2;
-  background-color: #EBE3DB;
+  background-color: #c9ccc9;
+  border: solid 2px black;
 }
 header .progress-container {
-  background-color: #EBE3DB;
-  width: 40rem;
+  width: 80%;
   height: 100%;
   display: flex;
   flex-direction: row;
@@ -306,12 +385,12 @@ header .about_button {
 header .portfolio_button {
   width: 3rem;
   height: 3rem;
-  background-color: #3A2D28;
+  background-color: #514689;
 }
 header .contactForm_button {
   width: 3rem;
   height: 3rem;
-  background-color: #3A2D28;
+  background-color: #514689;
 }
 
 .progress-circle {
@@ -355,15 +434,15 @@ body::-webkit-scrollbar {
 }
 
 .one {
-  background-color: #CBAD8D;
+  background-color: #b2b4b2;
 }
 
 .two {
-  background-color: #A48374;
+  background-color: #707372;
 }
 
 .three {
-  background-color: #3A2D28;
+  background-color: #54585a;
 }
 
 .pin-spacer {
