--- a/src/styles/_contact-form.scss
+++ b/src/styles/_contact-form.scss
@@ -1,3 +1,6 @@
+@use "./variables";
+
+
 .contact-form_container{
     width: 100%;
     height: 100%;
@@ -5,61 +8,201 @@
     display: flex;
     justify-content: center;
 
-    article{
-        display: flex;
+    .email-button{
+        background-image: url(/design_elements/portoflio-list-elements/mail-icon.svg);
+        background-size: 70%;
+        background-repeat: no-repeat;
+        background-position: center;
+    }
+
+    .email-box{
+        height: 30rem;
+        z-index: 3;
+        max-width: 50rem;
+        min-width: 50rem;
+        min-height: 30rem;
+        z-index: 3;
+    }
+
+    .email-container{
+        position: absolute;
+
         flex-direction: column;
         justify-content: center;
+        align-items: center;
+
+        width: 100%;
+        height: 100%;
+
+        .email-header{
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: center;
+
+            width: 100%;
+            height: 4rem;
+            padding-left: 1rem;
+            padding-right: 1rem;
+
+            border: 3px solid variables.$shaaq-black;
+            border-bottom: none;
+            background-color: variables.$shaaq-light_purple;
+            z-index: 4;
+
+            .contact-header-exit-button{
+                position: relative;
+                width: 2.6rem;
+                height: 2.6rem;
+
+                border: 2.8px solid variables.$shaaq-black;
+
+                background-image: url("/design_elements/portoflio-list-elements/x.svg");
+                background-size: 80%;
+                background-repeat: no-repeat;
+                background-position: center;
+
+                box-shadow: 3px 3px;
+            }
+
+            
+            .contact-header-exit-button:hover{
+                top: 3px;
+                left: 3px;
+                
+                box-shadow: 0px 0px;
+
+            }
+        }
+
+        .email-content{
+
+            width: 100%;
+            height: 100%;
+            background-color: variables.$shaaq-white;
+
+            border: 3px solid black;
+
+            z-index: 3;
+            overflow-y: scroll;
+            overflow-x: hidden;
+            
+            form{
+                
+                display: flex;
+                flex-direction: column;
+            
+                align-items: center;
+
+                z-index: 2;
+
+                width: 100%;
+                height: 100%;
+                
+            }
+        }
+
+        
+        .contact-form-background{
+            width: 100%;
+            height: 100%;
+            position: absolute;
+                
+            background-color: variables.$shaaq-tertiary;
+            opacity: 90%;
+            
+            z-index: 0;
+        }
+
     }
+    
+
+
 }
+
+
+
+
+
+
 
 .contact-form_input{
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    row-gap: 1rem;
+    row-gap: 2.5rem;
+
+    padding: 1rem;
 
 
     .form{
-        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         font-size: 1.5rem;
-        border-radius: 0.5rem;
-
         padding: 0.5rem;
     }
 
-    .input-button-container{
-        display: flex;
-        flex-direction: row;
-        column-gap: 1rem;
-
-        button{
+    .send-button{
+            position: relative;
+            height: 2.5rem;
             width: 8.5rem;
+            align-self: center;
+            background-color: variables.$shaaq-light_purple;
+
+            box-shadow: 3px 3px;
         }
+    
+    .send-button:hover{
+            top: 3px;
+            left: 3px;
+            
+            box-shadow: 0px 0px;
+
+     }
     }
 
     .input-container{
         display: flex;
         flex-direction: column;
         row-gap: 0.5rem;
+        width: 100%;
 
+        .input-subject{
+            display: flex;
+            flex-direction: row; 
+            align-items: center;
+            justify-content: center;
+            column-gap: 1rem;
+
+            h1{
+                width: 6rem;
+            }
+        }
+
+        .input-email{
+            display: flex;
+            flex-direction: row; 
+            align-items: center;
+            column-gap: 1rem;
+
+            h1{
+                width: 6rem;
+            }
+        }
     }
 
     .input{
-        width: 15rem;
+        width: 100%;
         height: 2rem;
     }
 
     .text{
-        min-width: 25rem;
-        max-width: 25rem;
+        width: 100%;
         min-height: 15rem;
         max-height: 15rem;
-
+        resize: none;
         
 
     }
-}
+
 
 
 .contact-text-container{
