--- a/src/styles/_portfolio.scss
+++ b/src/styles/_portfolio.scss
@@ -9,6 +9,24 @@
     
 }
 
+#javascript{
+    background-image: url(/design_elements/portoflio-list-elements/pencil.svg);
+    background-position: center;
+    background-size: 100%;
+}
+
+#css{
+    background-image: url(/design_elements/portoflio-list-elements/paint-brush-icon.svg);
+    background-position: center;
+    background-size: 100%;
+}
+
+#general{
+    background-image: url(/design_elements/portoflio-list-elements/fountain-pen-icon.svg);
+    background-position: center bottom;
+    background-size: 100%;
+}
+
 .portfolio-items{
     width: 100%;
     height: 100%;
@@ -24,16 +42,7 @@
 
 }
 
-.portfolio-button{
-    width: 12rem;
-    height: 12rem;
 
-    border-radius: 50%;
-    justify-self: center;
-
-    background-color: variables.$shaaq-white;
-   
-}
 
 .visible{
     display: flex;
@@ -55,77 +64,182 @@
     align-items: center;
 
     .portfolio-list{
-        display: grid;
-        grid-template-columns: repeat(1, 1fr);
-        grid-template-rows: repeat(auto, 1fr);
-
+        height: 40rem;
+        z-index: 3;
         max-width: 60rem;
         min-width: 60rem;
-        height: 50rem;
         min-height: 20rem;
-
-        margin-top: 50%;
-        margin-bottom: 50%;
-
-        border: 3px solid black;
-        border-radius: 5px;
-        z-index: 3;
-        overflow-y: scroll;
-        overflow-x: hidden;
-        
-        background-color: variables.$shaaq-white;
         
 
-        .portfolio-data-item{
-           justify-self: center;
-           align-self: center;
+        .portfolio-list-header{
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: center;
 
-           display: grid;
-           grid-template-columns: repeat(3, 33%);
-           grid-template-rows: repeat(1, 1fr);
-           grid-template-areas: "names description buttons";
+            width: 100%;
+            height: 4rem;
+            padding-left: 1rem;
+            padding-right: 1rem;
+
+            border: 3px solid variables.$shaaq-black;
+            border-bottom: none;
+            background-color: variables.$shaaq-light_purple;
+            z-index: 4;
+
            
 
-           width: 100%;
-           height: 8rem;
-           
-           border-bottom: 2px solid variables.$shaaq-black;
-           background-color: variables.$shaaq-white;
-           overflow: hidden;
 
-           .data-item-name{
-            grid-area: names;
+            .portfolio-header-exit-button{
+                position: relative;
+                width: 2.6rem;
+                height: 2.6rem;
 
-            display: flex;
-            justify-content: center;
-            align-items: center;
-           }
+                border: 2.8px solid variables.$shaaq-black;
 
-           .data-item-description{
-            grid-area: description;
+                background-image: url("/design_elements/portoflio-list-elements/x.svg");
+                background-size: 80%;
+                background-repeat: no-repeat;
+                background-position: center;
 
-            display: flex;
-            justify-content: center;
-            align-items: center;
-           }
+                box-shadow: 3px 3px;
 
-           .data-item-buttons{
-            grid-area: buttons;
+            }
 
-            display: flex;
-            justify-content: center;
-            align-items: center;
-           }
+            .portfolio-header-exit-button:hover{
+                top: 3px;
+                left: 3px;
+                
+                box-shadow: 0px 0px;
+
+            }
+        }
 
 
+        .portfolio-list-content{
+            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+            display: grid;
+            grid-template-columns: repeat(1, 1fr);
+            grid-template-rows: repeat(auto, 1fr);
+    
+            width: 100%;
+            height: 100%;
+            
+            
 
-           a{
-            color: variables.$shaaq-black;
-            font-size: 0.9rem;
-            text-decoration: none;
-           }
+            border: 3px solid black;
+            
+            z-index: 3;
+            overflow-y: scroll;
+            overflow-x: hidden;
+            
+            background-color: variables.$shaaq-white;
+            
+    
+            .portfolio-data-item{
+               justify-self: center;
+               align-self: center;
+    
+               display: grid;
+               grid-template-columns: repeat(3, 33%);
+               grid-template-rows: repeat(1, 1fr);
+               grid-template-areas: "names description buttons";
+               
+    
+               width: 100%;
+               height: 8rem;
+               padding-left: 1rem;
+               padding-right: 1rem;
+               
+               border-bottom: 2px solid variables.$shaaq-black;
+               background-color: variables.$shaaq-white;
+               overflow: hidden;
+    
+               .data-item-name{
+                grid-area: names;
+                width: 100%;
+                display: flex;
+                justify-content: flex-start;
+                align-items: center;
+                
+                overflow: hidden;
+               }
+    
+               .data-item-description{
+                font-size: 80%;
+                grid-area: description;
+                display: flex;
+                justify-content: flex-start;
+                align-items: center;
+                padding-left: 1rem;
+                padding-right: 1rem;
+               }
+    
+               .data-item-buttons{
+                grid-area: buttons;
+    
+                display: flex;
+                justify-content: space-around;
+                align-items: center;
+
+                .webpage{
+                    position: relative;
+                    width: 3rem;
+                    height: 3rem;
+
+                    background-color: variables.$shaaq-light_purple;
+                    background-image: url("/design_elements/portoflio-list-elements/icon_file_text_.svg");
+                    background-position: center;
+                    background-repeat: no-repeat;
+                    background-size: 80%;
+                    border: 2.8px solid black;
+                    box-shadow: 3px 3px;
+
+                }
+
+                .webpage:hover{
+                    top: 3px;
+                    left: 3px;
+                    
+                    box-shadow: 0px 0px;
+    
+                }
+
+                .source-code{
+                    position: relative;
+                    width: 3rem;
+                    height: 3rem;
+
+                    background-color: variables.$shaaq-light_purple;
+                    background-image: url("/design_elements/portoflio-list-elements/source_github_logo_.svg");
+                    background-position: 60%;
+                    background-repeat: no-repeat;
+                    background-size: 90%;
+
+                    border: 2.8px solid black;
+                    box-shadow: 3px 3px;
+                }
+
+                .source-code:hover{
+                    top: 3px;
+                    left: 3px;
+                    
+                    box-shadow: 0px 0px;
+    
+                }
+
+               }
+               
+               a{
+                color: variables.$shaaq-black;
+                font-size: 0.9rem;
+                text-decoration: none;
+               }
+            }
         }
     }
+
+
 
 
     .portfolio-list-background{
