--- a/src/styles/stylesheet.css
+++ b/src/styles/stylesheet.css
@@ -516,8 +516,7 @@ button {
 }
 
 .App {
-  background: linear-gradient(180deg, rgb(241, 237, 230) 0%, rgb(238, 225, 211) 100%);
-  width: 100vw;
+  width: 100%;
   height: 100vh;
 }
 
@@ -653,4 +652,17 @@ body::-webkit-scrollbar {
   align-self: center;
   border: 3px solid black;
   background-color: #a7a4e0;
+}
+
+@media only screen and (max-width: 1000px) {
+  .App {
+    position: relative;
+    width: 100%;
+    max-width: 100%;
+    overflow: hidden;
+    background-color: lavenderblush;
+  }
+  .container {
+    display: none;
+  }
 }/*# sourceMappingURL=stylesheet.css.map */
