--- a/src/styles/stylesheet.scss
+++ b/src/styles/stylesheet.scss
@@ -4,6 +4,8 @@
 @use "./about";
 @use "./variables";
 
+
+
 @mixin flex-box($flex-direction, $justify-content, $align-items){
     display: flex;
     flex-direction: $flex-direction;
@@ -22,14 +24,16 @@ button{
     cursor: pointer;
 }
 
+
+
 .App{
-    background: linear-gradient(180deg, rgba(241,237,230,1) 0%, rgba(238,225,211,1) 100%);
-    width: 100vw;
+    width: 100%;
     height: 100vh;
 }
 
 html, body, .container, .panel{
     max-height: 100vh;
+
     
 }
 
@@ -186,3 +190,24 @@ background-color: variables.$shaaq-tertiary;
     background-color: variables.$shaaq-light_purple;
    
 }
+
+@media only screen and (max-width: 1000px) {
+
+    .App{
+        position: relative;
+        width: 100%;
+        max-width: 100%;
+        overflow: hidden;
+        background-color: lavenderblush;
+    }
+
+    .header-container{
+       
+    }
+
+    
+
+    .container {
+        display: none;
+    }
+  }
