--- a/src/styles/_contact-form.scss
+++ b/src/styles/_contact-form.scss
@@ -2,8 +2,9 @@
 
 
 .contact-form_container{
-    width: 100%;
-    height: 100%;
+    min-width: 80vw;
+    max-width: 80vw;
+    min-height: 100vh;
 
     display: flex;
     justify-content: center;
