--- a/src/styles/_portfolio.scss
+++ b/src/styles/_portfolio.scss
@@ -9,19 +9,19 @@
     
 }
 
-#javascript{
+.javascript{
     background-image: url(/design_elements/portoflio-list-elements/pencil.svg);
     background-position: center;
     background-size: 100%;
 }
 
-#css{
+.css{
     background-image: url(/design_elements/portoflio-list-elements/paint-brush-icon.svg);
     background-position: center;
     background-size: 100%;
 }
 
-#general{
+.general{
     background-image: url(/design_elements/portoflio-list-elements/fountain-pen-icon.svg);
     background-position: center bottom;
     background-size: 100%;
@@ -46,6 +46,7 @@
 
 .visible{
     display: flex;
+    opacity: 100%;
 }
 
 .hidden{
@@ -64,10 +65,11 @@
     align-items: center;
 
     .portfolio-list{
+        
         height: 40rem;
         z-index: 3;
-        max-width: 60rem;
-        min-width: 60rem;
+        max-width: 80vw;
+        min-width: 80vw;
         min-height: 20rem;
         
 
@@ -120,13 +122,10 @@
             font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
             display: grid;
             grid-template-columns: repeat(1, 1fr);
-            grid-template-rows: repeat(auto, 1fr);
-    
+            grid-template-rows: auto;
+            
             width: 100%;
             height: 100%;
-            
-            
-
             border: 3px solid black;
             
             z-index: 3;
@@ -287,3 +286,4 @@
     stroke-dashoffset: 1000;
     fill-opacity: 0;
 }
+
