--- a/src/styles/stylesheet.css
+++ b/src/styles/stylesheet.css
@@ -11,19 +11,19 @@
   display: flex;
 }
 
-#javascript {
+.javascript {
   background-image: url(/design_elements/portoflio-list-elements/pencil.svg);
   background-position: center;
   background-size: 100%;
 }
 
-#css {
+.css {
   background-image: url(/design_elements/portoflio-list-elements/paint-brush-icon.svg);
   background-position: center;
   background-size: 100%;
 }
 
-#general {
+.general {
   background-image: url(/design_elements/portoflio-list-elements/fountain-pen-icon.svg);
   background-position: center bottom;
   background-size: 100%;
@@ -42,6 +42,7 @@
 
 .visible {
   display: flex;
+  opacity: 100%;
 }
 
 .hidden {
@@ -59,8 +60,8 @@
 .portfolio-list-container .portfolio-list {
   height: 40rem;
   z-index: 3;
-  max-width: 60rem;
-  min-width: 60rem;
+  max-width: 80vw;
+  min-width: 80vw;
   min-height: 20rem;
 }
 .portfolio-list-container .portfolio-list .portfolio-list-header {
@@ -97,7 +98,7 @@
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   display: grid;
   grid-template-columns: repeat(1, 1fr);
-  grid-template-rows: repeat(auto, 1fr);
+  grid-template-rows: auto;
   width: 100%;
   height: 100%;
   border: 3px solid black;
@@ -223,8 +224,9 @@
 }
 
 .contact-form_container {
-  width: 100%;
-  height: 100%;
+  min-width: 80vw;
+  max-width: 80vw;
+  min-height: 100vh;
   display: flex;
   justify-content: center;
 }
@@ -455,6 +457,11 @@ table {
   border-spacing: 0;
 }
 
+.about-name {
+  width: 100vw;
+  min-height: 100vh;
+}
+
 .background-text-container {
   width: 100%;
   height: 100%;
@@ -482,7 +489,7 @@ table {
   left: 5rem;
 }
 .background-text-container .name-text-container {
-  width: 100%;
+  width: 90vw;
 }
 .background-text-container .im-text-container {
   position: relative;
@@ -513,6 +520,10 @@ table {
 
 button {
   cursor: pointer;
+}
+
+.scroll-mobile {
+  display: none;
 }
 
 .App {
@@ -657,12 +668,32 @@ body::-webkit-scrollbar {
 @media only screen and (max-width: 1000px) {
   .App {
     position: relative;
-    width: 100%;
-    max-width: 100%;
+    width: 100vw;
+    max-width: 100vw;
+    min-height: 400vh;
     overflow: hidden;
     background-color: lavenderblush;
   }
-  .container {
+  .scroll {
     display: none;
+  }
+  .scroll-mobile {
+    display: flex;
+  }
+  .container-mobile {
+    overflow: hidden;
+    width: 100vw;
+    min-height: 300vh;
+    display: flex;
+    flex-direction: column;
+  }
+  .container-mobile .panel-mobile {
+    width: 100vw;
+    height: 100vh;
+    font-weight: 700;
+    font-size: 1.5em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }/*# sourceMappingURL=stylesheet.css.map */
