--- a/src/styles/stylesheet.scss
+++ b/src/styles/stylesheet.scss
@@ -24,7 +24,9 @@ button{
     cursor: pointer;
 }
 
-
+.scroll-mobile{
+    display: none;
+}
 
 .App{
     width: 100%;
@@ -113,11 +115,6 @@ html, body, .container, .panel{
     }
 }
 
-
-
-
-
-
 .progress-circle{
     position: relative;
     
@@ -195,19 +192,43 @@ background-color: variables.$shaaq-tertiary;
 
     .App{
         position: relative;
-        width: 100%;
-        max-width: 100%;
+        width: 100vw;
+        max-width: 100vw;
+        min-height: 400vh;
         overflow: hidden;
         background-color: lavenderblush;
     }
 
-    .header-container{
-       
+    
+
+    .scroll {
+       display: none;
+    }
+
+    .scroll-mobile{
+        display: flex;
+    }
+
+    .container-mobile{
+        overflow: hidden;
+        width: 100vw;
+        min-height: 300vh;
+        display: flex;
+        flex-direction: column;
+        
+        .panel-mobile{
+            width: 100vw;
+            height: 100vh;
+            font-weight: 700;
+            font-size: 1.5em;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        
+        }
     }
 
     
 
-    .container {
-        display: none;
-    }
+    
   }
