--- a/src/styles/_contact-form.scss
+++ b/src/styles/_contact-form.scss
@@ -2,8 +2,8 @@
 
 
 .contact-form_container{
-    min-width: 80vw;
-    max-width: 80vw;
+    min-width: 100vw;
+    max-width: 100vw;
     min-height: 100vh;
 
     display: flex;
@@ -19,8 +19,8 @@
     .email-box{
         height: 30rem;
         z-index: 3;
-        max-width: 50rem;
-        min-width: 50rem;
+        max-width: 80vw;
+        min-width: 80vw;
         min-height: 30rem;
         z-index: 3;
     }
@@ -209,9 +209,6 @@
 .contact-text-container{
     position: relative;
     align-self: flex-start;
-
-    left: 5%;
-    top: 10%;
     width: 100%;
     overflow: visible;
 
@@ -219,10 +216,10 @@
 
 .form-text-container{
     position: relative;
-        align-self: flex-end;
-        font-size: 15rem;     
-        right: 15%;
-        bottom: 10%;
+    width: 100vw;
+        align-self: flex-start;
+        font-size: 20vw;     
+        
 
         overflow: visible;
 }
