--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -1,51 +1,54 @@
 .about-name{
-    width: 100vw;
+    
     min-height: 100vh;
 }
 
 .background-text-container{
-    width: 100%;
+    
     height: 100%;
 
     position: absolute;
 
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     flex-direction: column;
-    row-gap: 2rem;
+    row-gap: 20vh;
     z-index: -10;
+    
 
     .main-text{
-        font-size: 10rem;
+        font-size: 20vw;
         color: #000000;
         
     }
 
     .sub-text{
         position: relative;
-        font-size: 13rem;
+        font-size: 23vw;
         color: #000000;
         
     }
 
 
+
     .hi-text-container{
-        position: relative;
         align-self: flex-start;
-        top: 10%;
-        left: 5rem;
+        position: relative;
+        padding-top: 10vh;
+        overflow: visible;
         
     }
     .name-text-container{
-        width: 90vw;
+        overflow: visible;
+        width: 100vw;
+        height: 20vh;
     }
     .im-text-container{
         position: relative;
-        align-self: flex-end;
-        font-size: 15rem;     
-        right: 5rem;
-        bottom: 10%;
+        width: 90%;
+        overflow: visible;
+        
     }
     .hi {
         stroke-dasharray: 850;
@@ -59,7 +62,7 @@
         fill-opacity: 0;
     }
     .name{
-        stroke-dasharray: 770;
+        stroke-dasharray: 1000;
         stroke-dashoffset: 1000;
         fill-opacity: 0;
     }
