--- a/src/styles/_portfolio.scss
+++ b/src/styles/_portfolio.scss
@@ -66,7 +66,7 @@
 
     .portfolio-list{
         
-        height: 40rem;
+        height: 50vh;
         z-index: 3;
         max-width: 80vw;
         min-width: 80vw;
@@ -155,6 +155,7 @@
                overflow: hidden;
     
                .data-item-name{
+                font-size: 5vw;
                 grid-area: names;
                 width: 100%;
                 display: flex;
@@ -258,19 +259,16 @@
     position: relative;
     align-self: flex-start;
 
-    left: 5%;
-    top: 10%;
-    width: 100%;
+    
     overflow: visible;
 
 }
 
 .work-text-container{
     position: relative;
-        align-self: flex-end;
+        align-self: flex-start;
         font-size: 15rem;     
-        right: 15%;
-        bottom: 10%;
+        
 
         overflow: visible;
 }
@@ -287,3 +285,16 @@
     fill-opacity: 0;
 }
 
+
+@media only screen and (max-width: 800px) {
+    .portfolio-list-container .portfolio-list .portfolio-list-content .portfolio-data-item{
+        grid-template-columns: repeat(2, 50%);
+        grid-template-rows: repeat(1, 1fr);
+        grid-template-areas: "names buttons";
+
+        .data-item-description{
+            position: absolute;
+            display: none;
+        }
+    }
+}
