--- a/src/styles/stylesheet.css
+++ b/src/styles/stylesheet.css
@@ -58,7 +58,7 @@
   align-items: center;
 }
 .portfolio-list-container .portfolio-list {
-  height: 40rem;
+  height: 50vh;
   z-index: 3;
   max-width: 80vw;
   min-width: 80vw;
@@ -123,6 +123,7 @@
   overflow: hidden;
 }
 .portfolio-list-container .portfolio-list .portfolio-list-content .portfolio-data-item .data-item-name {
+  font-size: 5vw;
   grid-area: names;
   width: 100%;
   display: flex;
@@ -196,18 +197,13 @@
 .previous-text-container {
   position: relative;
   align-self: flex-start;
-  left: 5%;
-  top: 10%;
-  width: 100%;
   overflow: visible;
 }
 
 .work-text-container {
   position: relative;
-  align-self: flex-end;
+  align-self: flex-start;
   font-size: 15rem;
-  right: 15%;
-  bottom: 10%;
   overflow: visible;
 }
 
@@ -223,9 +219,20 @@
   fill-opacity: 0;
 }
 
+@media only screen and (max-width: 800px) {
+  .portfolio-list-container .portfolio-list .portfolio-list-content .portfolio-data-item {
+    grid-template-columns: repeat(2, 50%);
+    grid-template-rows: repeat(1, 1fr);
+    grid-template-areas: "names buttons";
+  }
+  .portfolio-list-container .portfolio-list .portfolio-list-content .portfolio-data-item .data-item-description {
+    position: absolute;
+    display: none;
+  }
+}
 .contact-form_container {
-  min-width: 80vw;
-  max-width: 80vw;
+  min-width: 100vw;
+  max-width: 100vw;
   min-height: 100vh;
   display: flex;
   justify-content: center;
@@ -239,8 +246,8 @@
 .contact-form_container .email-box {
   height: 30rem;
   z-index: 3;
-  max-width: 50rem;
-  min-width: 50rem;
+  max-width: 80vw;
+  min-width: 80vw;
   min-height: 30rem;
   z-index: 3;
 }
@@ -376,18 +383,15 @@
 .contact-text-container {
   position: relative;
   align-self: flex-start;
-  left: 5%;
-  top: 10%;
   width: 100%;
   overflow: visible;
 }
 
 .form-text-container {
   position: relative;
-  align-self: flex-end;
-  font-size: 15rem;
-  right: 15%;
-  bottom: 10%;
+  width: 100vw;
+  align-self: flex-start;
+  font-size: 20vw;
   overflow: visible;
 }
 
@@ -458,45 +462,43 @@ table {
 }
 
 .about-name {
-  width: 100vw;
   min-height: 100vh;
 }
 
 .background-text-container {
-  width: 100%;
   height: 100%;
   position: absolute;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   flex-direction: column;
-  row-gap: 2rem;
+  row-gap: 20vh;
   z-index: -10;
 }
 .background-text-container .main-text {
-  font-size: 10rem;
+  font-size: 20vw;
   color: #000000;
 }
 .background-text-container .sub-text {
   position: relative;
-  font-size: 13rem;
+  font-size: 23vw;
   color: #000000;
 }
 .background-text-container .hi-text-container {
-  position: relative;
   align-self: flex-start;
-  top: 10%;
-  left: 5rem;
+  position: relative;
+  padding-top: 10vh;
+  overflow: visible;
 }
 .background-text-container .name-text-container {
-  width: 90vw;
+  overflow: visible;
+  width: 100vw;
+  height: 20vh;
 }
 .background-text-container .im-text-container {
   position: relative;
-  align-self: flex-end;
-  font-size: 15rem;
-  right: 5rem;
-  bottom: 10%;
+  width: 90%;
+  overflow: visible;
 }
 .background-text-container .hi {
   stroke-dasharray: 850;
@@ -509,7 +511,7 @@ table {
   fill-opacity: 0;
 }
 .background-text-container .name {
-  stroke-dasharray: 770;
+  stroke-dasharray: 1000;
   stroke-dashoffset: 1000;
   fill-opacity: 0;
 }
@@ -527,12 +529,37 @@ button {
 }
 
 .App {
-  width: 100%;
-  height: 100vh;
+  position: relative;
+  width: 100vw;
+  max-width: 100vw;
+  min-height: 100vh;
+  overflow: hidden;
+  background-color: lavenderblush;
+}
+
+.scroll-mobile {
+  display: flex;
 }
 
 html, body, .container, .panel {
   max-height: 100vh;
+}
+
+.container-mobile {
+  overflow: hidden;
+  width: 100vw;
+  min-height: 300vh;
+  display: flex;
+  flex-direction: column;
+}
+.container-mobile .panel-mobile {
+  width: 100vw;
+  height: 100vh;
+  font-weight: 700;
+  font-size: 1.5em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .name_animation_container {
@@ -656,44 +683,12 @@ body::-webkit-scrollbar {
 }
 
 .display-button {
-  width: 12rem;
-  height: 12rem;
+  width: 20vw;
+  height: 20vw;
   border-radius: 100%;
   justify-self: center;
   align-self: center;
   border: 3px solid black;
   background-color: #a7a4e0;
-}
-
-@media only screen and (max-width: 1000px) {
-  .App {
-    position: relative;
-    width: 100vw;
-    max-width: 100vw;
-    min-height: 400vh;
-    overflow: hidden;
-    background-color: lavenderblush;
-  }
-  .scroll {
-    display: none;
-  }
-  .scroll-mobile {
-    display: flex;
-  }
-  .container-mobile {
-    overflow: hidden;
-    width: 100vw;
-    min-height: 300vh;
-    display: flex;
-    flex-direction: column;
-  }
-  .container-mobile .panel-mobile {
-    width: 100vw;
-    height: 100vh;
-    font-weight: 700;
-    font-size: 1.5em;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
+  background-repeat: no-repeat;
 }/*# sourceMappingURL=stylesheet.css.map */
