style adjustments for readability

--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -25,7 +25,7 @@
 
     .sub-text{
         position: relative;
-        font-size: 23vw;
+        font-size:20vw;
         color: #000000;
         
     }
@@ -42,7 +42,7 @@
     .name-text-container{
         overflow: visible;
         width: 100vw;
-        height: 20vh;
+        height: 20rem;
     }
     .im-text-container{
         position: relative;
