--- a/src/styles/stylesheet.css
+++ b/src/styles/stylesheet.css
@@ -60,8 +60,8 @@
 .portfolio-list-container .portfolio-list {
   height: 50vh;
   z-index: 3;
-  max-width: 80vw;
-  min-width: 80vw;
+  max-width: 20rem;
+  min-width: 90vw;
   min-height: 20rem;
 }
 .portfolio-list-container .portfolio-list .portfolio-list-header {
@@ -123,7 +123,7 @@
   overflow: hidden;
 }
 .portfolio-list-container .portfolio-list .portfolio-list-content .portfolio-data-item .data-item-name {
-  font-size: 5vw;
+  font-size: 2rem;
   grid-area: names;
   width: 100%;
   display: flex;
@@ -246,8 +246,8 @@
 .contact-form_container .email-box {
   height: 30rem;
   z-index: 3;
-  max-width: 80vw;
-  min-width: 80vw;
+  max-width: 20rem;
+  min-width: 90vw;
   min-height: 30rem;
   z-index: 3;
 }
@@ -387,7 +387,7 @@
   overflow: visible;
 }
 
-.form-text-container {
+.me-text-container {
   position: relative;
   width: 100vw;
   align-self: flex-start;
@@ -401,7 +401,7 @@
   fill-opacity: 0;
 }
 
-.form {
+.me {
   stroke-dasharray: 1000;
   stroke-dashoffset: 1000;
   fill-opacity: 0;
@@ -481,7 +481,7 @@ table {
 }
 .background-text-container .sub-text {
   position: relative;
-  font-size: 23vw;
+  font-size: 20vw;
   color: #000000;
 }
 .background-text-container .hi-text-container {
@@ -493,7 +493,7 @@ table {
 .background-text-container .name-text-container {
   overflow: visible;
   width: 100vw;
-  height: 20vh;
+  height: 20rem;
 }
 .background-text-container .im-text-container {
   position: relative;
@@ -684,11 +684,48 @@ body::-webkit-scrollbar {
 
 .display-button {
   width: 20vw;
+  max-width: 20rem;
   height: 20vw;
+  max-height: 20rem;
   border-radius: 100%;
   justify-self: center;
   align-self: center;
   border: 3px solid black;
   background-color: #a7a4e0;
   background-repeat: no-repeat;
+}
+
+@media screen and (min-width: 1500px) {
+  .background-text-container .main-text {
+    font-size: 20rem;
+  }
+  .background-text-container .sub-text {
+    font-size: 14rem;
+  }
+  .display-button {
+    width: 25vw;
+    max-width: 15rem;
+    height: 20vw;
+    max-height: 15rem;
+    border-radius: 100%;
+    justify-self: center;
+    align-self: center;
+    border: 3px solid black;
+    background-color: #a7a4e0;
+    background-repeat: no-repeat;
+  }
+}
+@media screen and (min-width: 1000px) {
+  .background-text-container .main-text {
+    font-size: 15rem;
+  }
+  .background-text-container .sub-text {
+    font-size: 10rem;
+  }
+  .portfolio-list-container .portfolio-list {
+    min-width: 70rem;
+  }
+  .contact-form_container .email-box {
+    min-width: 70rem;
+  }
 }/*# sourceMappingURL=stylesheet.css.map */
