--- a/src/styles/stylesheet.scss
+++ b/src/styles/stylesheet.scss
@@ -205,7 +205,9 @@ background-color: variables.$shaaq-tertiary;
 
 .display-button{
     width: 20vw;
+    max-width: 20rem;
     height: 20vw;
+    max-height: 20rem;
 
     border-radius: 100%;
     justify-self: center;
@@ -217,3 +219,48 @@ background-color: variables.$shaaq-tertiary;
 }
 
 
+@media screen and (min-width: 1500px) {
+    .background-text-container .main-text{
+        font-size: 20rem;
+    }
+
+    .background-text-container .sub-text{
+        font-size: 14rem;
+    }
+
+    .display-button{
+        width: 25vw;
+        max-width: 15rem;
+        height: 20vw;
+        max-height: 15rem;
+    
+        border-radius: 100%;
+        justify-self: center;
+        align-self: center;
+        border: 3px solid black;
+        background-color: variables.$shaaq-light_purple;
+        background-repeat: no-repeat;
+       
+    }
+
+
+  }
+
+  @media screen and (min-width: 1000px) {
+    .background-text-container .main-text{
+        font-size: 15rem;
+    }
+
+    .background-text-container .sub-text{
+        font-size: 10rem;
+    }
+
+    .portfolio-list-container .portfolio-list{
+        min-width: 70rem;
+    }
+
+    .contact-form_container .email-box{
+        min-width: 70rem;
+    }
+
+  }
